#501 FIX HATEOAS implementation in SensorTypeController.